--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,23 @@
+@import '~antd/dist/antd.css';
+@import '~antd/dist/antd.dark.css';
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.controller {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.scrollIssue::-webkit-scrollbar {display:none;}
+
+
+
 .App {
   text-align: center;
 }
