--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,15 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  --antd-wave-shadow-color: black;
+}
+.hoStat {
+  padding: 2px 10px;
+}
+.hoStat:hover {
+  border: 0 #000 solid;
+  border-radius: 5px;
+  background: #4A4A4A;
 }
 .controller {
   margin: 0;
@@ -23,6 +32,15 @@ body {
 
 .App {
   text-align: center;
+}
+
+.ant-collapse-header-text {
+  font-weight: 700;
+  color: #A1A1A1;
+}
+
+.imgS2 {
+  height: 38px;
 }
 
 .App-logo {
@@ -47,6 +65,18 @@ body {
   color: white;
 }
 
+.messageItem {
+  padding: 5px;
+  /* border-bottom: 1px solid #A1A1A1; */
+  font-size: 15px;
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -58,4 +88,69 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+.chat {
+  background: #404040;
+  min-width: 100%;
+  max-height: 100vh;
+  display: flex;
+  max-width: 70vw!important;
+  flex-direction: column;
+}
+
+.message::-webkit-scrollbar {display:none;}
+
+.message {
+  height: 95vh;
+  overflow-y: scroll;
+  max-width: 70vw!important;
+
+}
+
+.messageItemContentName {
+  color: #dcdcdc;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.messageItemContent {
+  color: #dcdcdc;
+  font-size: 14.5px;
+}
+
+.time {
+  margin-left: 5px;
+  color: #979797;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.chatbar {
+  background: transparent;
+  margin: auto;
+  height: 5vh;
+  width: 98%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+
+input[type="text"], textarea {
+
+  background-color : #606060; 
+
+  border-color: #606060;
+
+  color: #E2E2E2;
+
+}
+
+.inputMain:hover {
+  background-color : #606060!important; 
+}
+
+.inputMain:focus {
+  background-color : #606060!important; 
 }
