--- a/client/src/FriendPanel/FriendPanel.css
+++ b/client/src/FriendPanel/FriendPanel.css
@@ -43,6 +43,7 @@
     position: relative;
 }
 .iconFriend {
+
     text-align: right !important;
     font-size: x-large;
 }
@@ -51,7 +52,15 @@
     font-size: x-large;
 }
 .searchBar {
-    margin-left: 3vw;
+    width: 95%;
     font-size: x-large;
-    background-color: black !important;
 }
+.searchBar2{
+    width: 95%;
+    
+}
+.DropDownFriend{
+    margin-right: 10px;
+    margin-top: -15px;
+}
+
