--- a/client/src/App.css
+++ b/client/src/App.css
@@ -163,3 +163,7 @@ input[type="text"], textarea {
   justify-content: center;
   align-items: center;
 }
+
+.ant-modal-body {
+  background-color: #535353;
+}
