--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,169 +1,170 @@
-@import '~antd/dist/antd.css';
+@import '~antd/dist/antd.min.css';
 @import '~antd/dist/antd.dark.css';
 html,
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  --antd-wave-shadow-color: black;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    --antd-wave-shadow-color: black;
 }
 .hoStat {
-  padding: 2px 10px;
+    padding: 2px 10px;
 }
 .hoStat:hover {
-  border: 0 #000 solid;
-  border-radius: 5px;
-  background: #4A4A4A;
+    border: 0 #000 solid;
+    border-radius: 5px;
+    background: #4a4a4a;
 }
 .controller {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
-.scrollIssue::-webkit-scrollbar {display:none;}
+.scrollIssue::-webkit-scrollbar {
+    display: none;
+}
 
 .ant-tooltip-inner {
-  font-size: 14px;
-  font-weight: bold;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .ant-collapse-header-text {
-  font-weight: 700;
-  color: #A1A1A1;
+    font-weight: 700;
+    color: #a1a1a1;
 }
 
 .imgS2 {
-  height: 38px;
+    height: 38px;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .messageItem {
-  padding: 5px;
-  /* border-bottom: 1px solid #A1A1A1; */
-  font-size: 15px;
-  width: auto;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
+    padding: 5px;
+    /* border-bottom: 1px solid #A1A1A1; */
+    font-size: 15px;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .chat {
-  background: #404040;
-  min-width: 100%;
-  max-height: 100vh;
-  display: flex;
-  max-width: 70vw!important;
-  flex-direction: column;
+    background: #404040;
+    min-width: 100%;
+    max-height: 100vh;
+    display: flex;
+    max-width: 70vw !important;
+    flex-direction: column;
 }
 
-.message::-webkit-scrollbar {display:none;}
+.message::-webkit-scrollbar {
+    display: none;
+}
 
 .message {
-  height: 95vh;
-  overflow-y: scroll;
-  max-width: 70vw!important;
-
+    height: 95vh;
+    overflow-y: scroll;
+    max-width: 70vw !important;
 }
 
 .messageItemContentName {
-  color: #dcdcdc;
-  font-size: 15px;
-  font-weight: bold;
+    color: #dcdcdc;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .messageItemContent {
-  color: #dcdcdc;
-  font-size: 14.5px;
+    color: #dcdcdc;
+    font-size: 14.5px;
 }
 
 .time {
-  margin-left: 5px;
-  color: #979797;
-  font-size: 12px;
-  font-weight: 500;
+    margin-left: 5px;
+    color: #979797;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 .chatbar {
-  background: transparent;
-  margin: auto;
-  height: 5vh;
-  width: 98%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+    background: transparent;
+    margin: auto;
+    height: 5vh;
+    width: 98%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 
+input[type='text'],
+textarea {
+    background-color: #606060;
 
-input[type="text"], textarea {
+    border-color: #606060;
 
-  background-color : #606060; 
-
-  border-color: #606060;
-
-  color: #E2E2E2;
-
+    color: #e2e2e2;
 }
 
 .inputMain:hover {
-  background-color : #606060!important; 
+    background-color: #606060 !important;
 }
 
 .inputMain:focus {
-  background-color : #606060!important; 
+    background-color: #606060 !important;
 }
 
 .statusBar {
-  background: #404040;
-  height: 5vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    background: #404040;
+    height: 5vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ant-modal-body {
-  background-color: #535353;
+    background-color: #535353;
 }
