--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,7 +55,9 @@ body {
         animation: App-logo-spin infinite 20s linear;
     }
 }
-
+.menu {
+    color: #61dafb;
+}
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
