--- a/client/src/FriendPanel/FriendPanel.css
+++ b/client/src/FriendPanel/FriendPanel.css
@@ -1,66 +1,62 @@
 .headerPanel {
-    font-size: medium;
+  font-size: medium;
 }
 .panelContent {
-    font-size: medium;
-    padding: 5px 10px;
-    border-radius: 8px;
-    color:#b2b2b2;
+  font-size: medium;
+  padding: 5px 10px;
+  border-radius: 8px;
+  color: #b2b2b2;
 }
 .panelContent:hover {
-   
-    color:#e5e5e5 !important;
-    background-color: #4c4c4c;
+  color: #e5e5e5 !important;
+  background-color: #4c4c4c;
 }
 .serverName {
-    font-size: larger !important;
-    text-align: center !important;
+  font-size: larger !important;
+  text-align: center !important;
 }
-.avatarCard{
-    position: fixed;
-    width: 13vw !important;
-    background-color: #1F1F1F;
-    border: none;
-    bottom: 0;
+.avatarCard {
+  position: fixed;
+  width: 13vw !important;
+  background-color: #1f1f1f;
+  border: none;
+  bottom: 0;
 }
 .microOn {
-    color: green !important;
-    font-size: larger;
-    padding: 3px;
+  color: green !important;
+  font-size: larger;
+  padding: 3px;
 }
 .microOff {
-    color: red ! important;
-    font-size: larger;
-    padding: 3px;
+  color: red !important;
+  font-size: larger;
+  padding: 3px;
 }
 .menuIcon {
-    color: white !important;
-    font-size: larger !important;
+  color: white !important;
+  font-size: larger !important;
 }
-.menu {
-    background-color: #060606 !important;
-    border-radius: 8px;
-    position: relative;
+.menuf {
+  background-color: #060606 !important;
+  border-radius: 8px;
+  position: relative;
 }
 .iconFriend {
-
-    text-align: right !important;
-    font-size: x-large;
+  text-align: right !important;
+  font-size: x-large;
 }
 .iconFriend:hover {
-    text-align: right !important;
-    font-size: x-large;
+  text-align: right !important;
+  font-size: x-large;
 }
 .searchBar {
-    width: 95%;
-    font-size: x-large;
+  width: 95%;
+  font-size: x-large;
 }
-.searchBar2{
-    width: 95%;
-    
+.searchBar2 {
+  width: 95%;
 }
-.DropDownFriend{
-    margin-right: 10px;
-    margin-top: -15px;
+.DropDownFriend {
+  margin-right: 10px;
+  margin-top: -15px;
 }
-
