--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,15 @@
+@font-face {
+  font-family: 'Medium'; /*Can be any text*/
+  src: local('UniSansHeavyCAPS'), url('./UniSansHeavyCAPS.woff') format('woff');
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Medium';
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Medium';
 }
