--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,19 +155,8 @@ textarea {
   color: #e2e2e2;
 }
 
-.ant-input-group-addon {
-  background-color: #40444b !important;
-  border-color: #40444b !important;
-  cursor: pointer;
-}
-
 .emoji-picker-react {
   box-shadow: none !important;
-}
-
-.ant-input-group-addon:hover {
-  background-color: #36393f !important;
-  border-color: #36393f !important;
 }
 
 .inputMain:hover {
@@ -197,4 +186,8 @@ textarea {
 .ant-card-head {
   border-bottom: 1px solid #535353 !important;
   margin-bottom: 0;
+}
+
+.smileyA:hover {
+  background: #36393f;
 }
