--- a/client/src/App.css
+++ b/client/src/App.css
@@ -219,3 +219,11 @@ label {
   background-color: #2c2c2c !important;
   border-bottom: 0 !important;
 }
+
+.ant-collapse-header {
+  padding-bottom: 0 !important;
+}
+
+.ant-collapse-content-box {
+  padding-top: 0px !important;
+}
