--- a/client/src/FriendPanel/FriendPanel.css
+++ b/client/src/FriendPanel/FriendPanel.css
@@ -6,10 +6,11 @@
   padding: 5px 10px;
   border-radius: 8px;
   color: #b2b2b2;
+  cursor: pointer;
 }
 .panelContent:hover {
   color: #e5e5e5 !important;
-  background-color: #4c4c4c;
+  background-color: #42464d;
 }
 .serverName {
   font-size: larger !important;
