style modals and notif

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -227,3 +227,7 @@ label {
 .ant-collapse-content-box {
   padding-top: 0px !important;
 }
+
+.notificationHandler {
+  background: #36393f !important;
+}
