--- a/client/src/App.css
+++ b/client/src/App.css
@@ -231,3 +231,14 @@ label {
 .notificationHandler {
   background: #36393f !important;
 }
+
+.ant-notification-notice-close-icon {
+  color: #36393f !important;
+}
+
+.ant-notification-notice-message {
+  color: #e2e2e2 !important;
+  font-weight: bold;
+  letter-spacing: 0.8px;
+  padding-left: 5px;
+}
