--- a/client/src/App.css
+++ b/client/src/App.css
@@ -242,3 +242,18 @@ label {
   letter-spacing: 0.8px;
   padding-left: 5px;
 }
+
+.notificationReje {
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.notificationReje:hover {
+  cursor: pointer;
+  background-color: #585858 !important;
+}
+
+.ant-badge-count {
+  box-shadow: none !important;
+  padding: 2px;
+}
