style modals encore toujours et gestion temps messages et conditionnement profil et isowner

--- a/client/src/ChanelBar/ChanelBar.css
+++ b/client/src/ChanelBar/ChanelBar.css
@@ -16,6 +16,7 @@
 .serverName {
   font-size: larger !important;
   text-align: center !important;
+  margin-left: 10px !important;
 }
 .avatarCard {
   position: fixed;
