--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@ body {
 .hoStat:hover {
   border: 0 #000 solid;
   border-radius: 5px;
-  background: #4a4a4a;
+  background: #3c3f45 !important;
 }
 .controller {
   margin: 0;
@@ -75,7 +75,6 @@ body {
 }
 
 .messageItem {
-  padding: 5px;
   /* border-bottom: 1px solid #A1A1A1; */
   font-size: 15px;
   width: auto;
@@ -225,7 +224,12 @@ label {
 }
 
 .ant-collapse-content-box {
-  padding-top: 0px !important;
+  padding-top: 5px !important;
+  padding-bottom: 0px !important;
+  padding-left: 6px !important;
+}
+.ant-dropdown-trigger {
+  padding-left: 5px !important;
 }
 
 .notificationHandler {
@@ -256,4 +260,34 @@ label {
 .ant-badge-count {
   box-shadow: none !important;
   padding: 2px;
+}
+
+.message {
+  height: calc(95vh -44px) !important;
+}
+
+.ant-badge-dot {
+  right: 5px !important;
+  top: 35px !important;
+  width: 19px !important;
+  height: 19px !important;
+  box-shadow: none !important;
+  border: 4px solid rgb(47, 49, 54) !important;
+}
+
+.panelContentRen {
+  font-size: medium;
+  padding: 4px 8px !important;
+  margin-top: 2px;
+  margin-left: 25px !important;
+  border-radius: 8px;
+  color: #999999;
+  cursor: pointer;
+  font-size: 0.97rem;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+.panelContentRen:hover {
+  color: #c4c2c2 !important;
+  background-color: #42464d;
 }
