--- a/client/src/App.css
+++ b/client/src/App.css
@@ -316,3 +316,19 @@ input[type='submit']:hover {
   background-color: grey !important;
   cursor: pointer !important;
 }
+
+.paddingAvatarFix {
+  padding: 0 !important;
+}
+
+.badgination {
+  top: 5px !important;
+  border: 4px solid #292b2f !important;
+  border-radius: 50% !important;
+  box-shadow: none;
+}
+
+.loreImg:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
