--- a/client/src/App.css
+++ b/client/src/App.css
@@ -343,3 +343,7 @@ input[type='submit']:hover {
   opacity: 0.8;
   cursor: pointer;
 }
+
+.ant-tabs-ink-bar {
+  background-color: #42464d !important;
+}
